buttons and dark mode fixed

--- a/style.css
+++ b/style.css
@@ -7,14 +7,3 @@ body {
 }
 
 
-button, button:focus{
-  outline: none;
-  background: transparent;
-  border: none;
-}
-
-button:active{
-  outline: none;
-  background: transparent;
-  border: none;
-}
